5499
Duplicate of SI-4166, which has been fixed already for Scala 2.9.x.

{code}
Welcome to Scala version 2.9.0.r24265-b20110211020037 (Java HotSpot(TM) 64-Bit Server VM, Java 1.6.0_22).
Type in expressions to have them evaluated.
Type :help for more information.

scala> abstract class A {
     |   def get: Int
     | }
defined class A

scala> class Base(a: A)
defined class Base

scala> abstract class Derived extends Base(new A { def get = Derived.this.get }) {
     |   def get: Int
     | }
<console>:9: error: super constructor arguments cannot reference unconstructed `this`
       abstract class Derived extends Base(new A { def get = Derived.this.get }) {
                                                             ^
}}
